--- a/config/metasrv.example.toml
+++ b/config/metasrv.example.toml
@@ -51,19 +51,18 @@ provider = "raft_engine"
 
 # There're none raft-engine wal config since meta srv only involves in remote wal currently.
 
-# Uncomment the following lines if switching provider to "kafka".
 # Kafka wal config.
 # The broker endpoints of the Kafka cluster. ["127.0.0.1:9090"] by default.
 # broker_endpoints = ["127.0.0.1:9090"]
-# # Number of topics to be created upon start.
+# Number of topics to be created upon start.
 # num_topics = 64
-# # Topic selector type.
-# # Available selector types: 
-# # - "round_robin" (default)
+# Topic selector type.
+# Available selector types: 
+# - "round_robin" (default)
 # selector_type = "round_robin"
-# # A Kafka topic is constructed by concatenating `topic_name_prefix` and `topic_id`.
+# A Kafka topic is constructed by concatenating `topic_name_prefix` and `topic_id`.
 # topic_name_prefix = "greptimedb_kafka_wal"
-# # Number of partitions per topic.
+# Number of partitions per topic.
 # num_partitions = 1
-# # Expected number of replicas of each partition.
+# Expected number of replicas of each partition.
 # replication_factor = 3
