--- a/src/mito2/Cargo.toml
+++ b/src/mito2/Cargo.toml
@@ -20,6 +20,7 @@ bytes.workspace = true
 chrono.workspace = true
 common-base.workspace = true
 common-catalog.workspace = true
+common-config.workspace = true
 common-datasource.workspace = true
 common-decimal.workspace = true
 common-error.workspace = true
