--- a/src/common/config/Cargo.toml
+++ b/src/common/config/Cargo.toml
@@ -7,4 +7,8 @@ license.workspace = true
 [dependencies]
 common-base.workspace = true
 humantime-serde.workspace = true
+rskafka = "0.5"
 serde.workspace = true
+serde_json.workspace = true
+serde_with = "3"
+toml.workspace = true
