--- a/src/log-store/Cargo.toml
+++ b/src/log-store/Cargo.toml
@@ -21,10 +21,13 @@ common-macro.workspace = true
 common-meta.workspace = true
 common-runtime.workspace = true
 common-telemetry.workspace = true
+dashmap = "5.4"
 futures-util.workspace = true
 futures.workspace = true
 protobuf = { version = "2", features = ["bytes"] }
 raft-engine.workspace = true
+rskafka = "0.5"
+serde_json.workspace = true
 snafu.workspace = true
 store-api.workspace = true
 tokio-util.workspace = true
