--- a/src/log-store/Cargo.toml
+++ b/src/log-store/Cargo.toml
@@ -27,6 +27,7 @@ futures.workspace = true
 protobuf = { version = "2", features = ["bytes"] }
 raft-engine.workspace = true
 rskafka = "0.5"
+serde.workspace = true
 serde_json.workspace = true
 snafu.workspace = true
 store-api.workspace = true
