--- a/config/metasrv.example.toml
+++ b/config/metasrv.example.toml
@@ -61,8 +61,18 @@ provider = "raft_engine"
 # - "round_robin" (default)
 # selector_type = "round_robin"
 # A Kafka topic is constructed by concatenating `topic_name_prefix` and `topic_id`.
-# topic_name_prefix = "greptimedb_kafka_wal"
+# topic_name_prefix = "greptimedb_wal_kafka"
 # Number of partitions per topic.
 # num_partitions = 1
 # Expected number of replicas of each partition.
 # replication_factor = 3
+# Aboves which a topic creation operation will be cancelled.
+# create_topic_timeout = "30s"
+# The initial backoff for kafka clients.
+# backoff_init = "500ms"
+# The maximum backoff for kafka clients.
+# backoff_max = "10s"
+# Exponential backoff rate, i.e. next backoff = base * current backoff.
+# backoff_base = 2.0
+# Stop reconnecting if the total wait time reaches the deadline. If this config is missing, the reconnecting won't terminate.
+# backoff_deadline = "5mins"
