feat(remote_wal): implement topic allocation (#2970)
* chore: implement wal options allocator

* chore: implement round-robin topic selector

* feat: add shuffle to round-robin topic selector

* chore: implement kafka topic manager

* test: add tests for wal options allocator

* test: add wal provider to test config files

* test: leave todos for adding tests for remote wal

* fix: resolve review conversations

* fix: typo

--- a/src/common/meta/Cargo.toml
+++ b/src/common/meta/Cargo.toml
@@ -32,7 +32,9 @@ humantime-serde.workspace = true
 lazy_static.workspace = true
 prometheus.workspace = true
 prost.workspace = true
+rand.workspace = true
 regex.workspace = true
+rskafka = "0.5"
 serde.workspace = true
 serde_json.workspace = true
 serde_with = "3"
