--- a/src/common/grpc/Cargo.toml
+++ b/src/common/grpc/Cargo.toml
@@ -16,7 +16,7 @@ common-recordbatch.workspace = true
 common-runtime.workspace = true
 common-telemetry.workspace = true
 common-time.workspace = true
-dashmap = "5.4"
+dashmap.workspace = true
 datafusion.workspace = true
 datatypes.workspace = true
 flatbuffers = "23.1"
