--- a/src/common/meta/Cargo.toml
+++ b/src/common/meta/Cargo.toml
@@ -34,7 +34,7 @@ prometheus.workspace = true
 prost.workspace = true
 rand.workspace = true
 regex.workspace = true
-rskafka = "0.5"
+rskafka.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 serde_with = "3"
