--- a/src/datanode/Cargo.toml
+++ b/src/datanode/Cargo.toml
@@ -32,7 +32,7 @@ common-recordbatch.workspace = true
 common-runtime.workspace = true
 common-telemetry.workspace = true
 common-time.workspace = true
-dashmap = "5.4"
+dashmap.workspace = true
 datafusion-common.workspace = true
 datafusion-expr.workspace = true
 datafusion.workspace = true
@@ -55,7 +55,7 @@ query.workspace = true
 reqwest.workspace = true
 secrecy = { version = "0.8", features = ["serde", "alloc"] }
 serde.workspace = true
-serde_json = "1.0"
+serde_json.workspace = true
 servers.workspace = true
 session.workspace = true
 snafu.workspace = true
