--- a/src/datatypes/Cargo.toml
+++ b/src/datatypes/Cargo.toml
@@ -26,5 +26,5 @@ ordered-float = { version = "3.0", features = ["serde"] }
 paste = "1.0"
 rust_decimal = "1.32.0"
 serde.workspace = true
-serde_json = "1.0"
+serde_json.workspace = true
 snafu.workspace = true
