--- a/src/common/config/Cargo.toml
+++ b/src/common/config/Cargo.toml
@@ -7,7 +7,7 @@ license.workspace = true
 [dependencies]
 common-base.workspace = true
 humantime-serde.workspace = true
-rskafka = "0.5"
+rskafka.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 serde_with = "3"
