--- a/src/common/decimal/Cargo.toml
+++ b/src/common/decimal/Cargo.toml
@@ -11,5 +11,5 @@ common-error.workspace = true
 common-macro.workspace = true
 rust_decimal.workspace = true
 serde.workspace = true
-serde_json = "1.0"
+serde_json.workspace = true
 snafu.workspace = true
