--- a/src/common/procedure/Cargo.toml
+++ b/src/common/procedure/Cargo.toml
@@ -19,7 +19,7 @@ futures.workspace = true
 humantime-serde.workspace = true
 object-store.workspace = true
 serde.workspace = true
-serde_json = "1.0"
+serde_json.workspace = true
 smallvec.workspace = true
 snafu.workspace = true
 tokio.workspace = true
