--- a/src/common/time/Cargo.toml
+++ b/src/common/time/Cargo.toml
@@ -11,7 +11,7 @@ chrono.workspace = true
 common-error.workspace = true
 common-macro.workspace = true
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+serde_json.workspace = true
 snafu.workspace = true
 
 [dev-dependencies]
