--- a/src/file-engine/Cargo.toml
+++ b/src/file-engine/Cargo.toml
@@ -26,7 +26,7 @@ datatypes.workspace = true
 futures.workspace = true
 object-store.workspace = true
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+serde_json.workspace = true
 snafu.workspace = true
 store-api.workspace = true
 table.workspace = true
