--- a/src/frontend/Cargo.toml
+++ b/src/frontend/Cargo.toml
@@ -62,7 +62,7 @@ raft-engine.workspace = true
 regex.workspace = true
 script = { workspace = true, features = ["python"], optional = true }
 serde.workspace = true
-serde_json = "1.0"
+serde_json.workspace = true
 servers.workspace = true
 session.workspace = true
 snafu.workspace = true
