--- a/src/mito2/Cargo.toml
+++ b/src/mito2/Cargo.toml
@@ -32,7 +32,7 @@ common-runtime.workspace = true
 common-telemetry.workspace = true
 common-test-util = { workspace = true, optional = true }
 common-time.workspace = true
-dashmap = "5.4"
+dashmap.workspace = true
 datafusion-common.workspace = true
 datafusion-expr.workspace = true
 datafusion.workspace = true
