--- a/src/operator/Cargo.toml
+++ b/src/operator/Cargo.toml
@@ -43,7 +43,7 @@ prometheus.workspace = true
 query.workspace = true
 regex.workspace = true
 serde.workspace = true
-serde_json = "1.0"
+serde_json.workspace = true
 servers.workspace = true
 session.workspace = true
 snafu.workspace = true
