--- a/src/partition/Cargo.toml
+++ b/src/partition/Cargo.toml
@@ -22,7 +22,7 @@ meta-client.workspace = true
 moka = { workspace = true, features = ["future"] }
 prometheus.workspace = true
 serde.workspace = true
-serde_json = "1.0"
+serde_json.workspace = true
 snafu.workspace = true
 store-api.workspace = true
 table.workspace = true
