--- a/src/query/Cargo.toml
+++ b/src/query/Cargo.toml
@@ -47,7 +47,7 @@ promql-parser = "0.1.1"
 promql.workspace = true
 regex.workspace = true
 serde.workspace = true
-serde_json = "1.0"
+serde_json.workspace = true
 session.workspace = true
 snafu.workspace = true
 sql.workspace = true
