--- a/src/servers/Cargo.toml
+++ b/src/servers/Cargo.toml
@@ -80,7 +80,7 @@ rustls-pki-types = "1.0"
 schemars = "0.8"
 secrecy = { version = "0.8", features = ["serde", "alloc"] }
 serde.workspace = true
-serde_json = "1.0"
+serde_json.workspace = true
 session.workspace = true
 sha1 = "0.10"
 snafu.workspace = true
@@ -112,7 +112,7 @@ mysql_async = { version = "0.33", default-features = false, features = [
 ] }
 rand.workspace = true
 script = { workspace = true, features = ["python"] }
-serde_json = "1.0"
+serde_json.workspace = true
 session = { workspace = true, features = ["testing"] }
 table.workspace = true
 tokio-postgres = "0.7"
