--- a/src/store-api/Cargo.toml
+++ b/src/store-api/Cargo.toml
@@ -26,5 +26,5 @@ strum.workspace = true
 
 [dev-dependencies]
 async-stream.workspace = true
-serde_json = "1.0"
+serde_json.workspace = true
 tokio.workspace = true
