--- a/config/frontend.example.toml
+++ b/config/frontend.example.toml
@@ -1,5 +1,7 @@
 # Node running mode, see `standalone.example.toml`.
 mode = "distributed"
+# The default time zone of the server
+# default_time_zone = "UTC"
 
 [heartbeat]
 # Interval for sending heartbeat task to the Metasrv, 5 seconds by default.
