--- a/config/standalone.example.toml
+++ b/config/standalone.example.toml
@@ -2,6 +2,8 @@
 mode = "standalone"
 # Whether to enable greptimedb telemetry, true by default.
 enable_telemetry = true
+# The default time zone of the server
+# default_time_zone = "UTC"
 
 # HTTP server options.
 [http]
