--- a/src/common/time/Cargo.toml
+++ b/src/common/time/Cargo.toml
@@ -10,6 +10,7 @@ chrono-tz = "0.8"
 chrono.workspace = true
 common-error.workspace = true
 common-macro.workspace = true
+once_cell.workspace = true
 serde = { version = "1.0", features = ["derive"] }
 serde_json.workspace = true
 snafu.workspace = true
