--- a/src/cmd/Cargo.toml
+++ b/src/cmd/Cargo.toml
@@ -40,6 +40,7 @@ etcd-client.workspace = true
 file-engine.workspace = true
 frontend.workspace = true
 futures.workspace = true
+human-panic = "1.2.2"
 lazy_static.workspace = true
 meta-client.workspace = true
 meta-srv.workspace = true
