--- a/src/common/runtime/Cargo.toml
+++ b/src/common/runtime/Cargo.toml
@@ -14,11 +14,10 @@ once_cell.workspace = true
 paste.workspace = true
 prometheus.workspace = true
 snafu.workspace = true
+tokio-metrics = "0.3"
+tokio-metrics-collector = "0.2"
 tokio-util.workspace = true
 tokio.workspace = true
-
-tokio-metrics = "0.3"
-tokio-metrics-collector = { version = "0.2" }
 
 [dev-dependencies]
 tokio-test = "0.4"
