--- a/src/common/runtime/Cargo.toml
+++ b/src/common/runtime/Cargo.toml
@@ -14,6 +14,8 @@ once_cell.workspace = true
 paste.workspace = true
 prometheus.workspace = true
 snafu.workspace = true
+tokio-metrics = "0.3"
+tokio-metrics-collector = "0.2"
 tokio-util.workspace = true
 tokio.workspace = true
 
