--- a/config/standalone.example.toml
+++ b/config/standalone.example.toml
@@ -5,8 +5,8 @@ enable_telemetry = true
 
 # HTTP server options.
 [http]
-# Server address, "127.0.0.1:4000" by default.
-addr = "127.0.0.1:4000"
+# Server address, ".0.0.1:4000" by default.
+addr = ".0.0.1:4000"
 # HTTP request timeout, 30s by default.
 timeout = "30s"
 # HTTP request body limit, 64Mb by default.
@@ -15,8 +15,8 @@ body_limit = "64MB"
 
 # gRPC server options.
 [grpc]
-# Server address, "127.0.0.1:4001" by default.
-addr = "127.0.0.1:4001"
+# Server address, ".0.0.1:4001" by default.
+addr = ".0.0.1:4001"
 # The number of server worker threads, 8 by default.
 runtime_size = 8
 
@@ -24,8 +24,8 @@ runtime_size = 8
 [mysql]
 # Whether to enable
 enable = true
-# Server address, "127.0.0.1:4002" by default.
-addr = "127.0.0.1:4002"
+# Server address, ".0.0.1:4002" by default.
+addr = ".0.0.1:4002"
 # The number of server worker threads, 2 by default.
 runtime_size = 2
 
@@ -47,8 +47,8 @@ key_path = ""
 [postgres]
 # Whether to enable
 enable = true
-# Server address, "127.0.0.1:4003" by default.
-addr = "127.0.0.1:4003"
+# Server address, ".0.0.1:4003" by default.
+addr = ".0.0.1:4003"
 # The number of server worker threads, 2 by default.
 runtime_size = 2
 
@@ -65,8 +65,8 @@ key_path = ""
 [opentsdb]
 # Whether to enable
 enable = true
-# OpenTSDB telnet API server address, "127.0.0.1:4242" by default.
-addr = "127.0.0.1:4242"
+# OpenTSDB telnet API server address, ".0.0.1:4242" by default.
+addr = ".0.0.1:4242"
 # The number of server worker threads, 2 by default.
 runtime_size = 2
 
@@ -84,60 +84,38 @@ enable = true
 # Available wal providers:
 # - "raft_engine" (default)
 # - "kafka"
-provider = "raft_engine"
+provider = "kafka"
 
 # There're none raft-engine wal config since meta srv only involves in remote wal currently.
 
 # Kafka wal config.
-# The broker endpoints of the Kafka cluster. ["127.0.0.1:9090"] by default.
-# broker_endpoints = ["127.0.0.1:9090"]
-# Number of topics to be created upon start.
-# num_topics = 64
-# Topic selector type.
-# Available selector types: 
-# - "round_robin" (default)
-# selector_type = "round_robin"
-# A Kafka topic is constructed by concatenating `topic_name_prefix` and `topic_id`.
-# topic_name_prefix = "greptimedb_wal_topic"
-# Number of partitions per topic.
-# num_partitions = 1
-# Expected number of replicas of each partition.
-# replication_factor = 3
-# Above which a topic creation operation will be cancelled.
-# create_topic_timeout = "30s"
-# The initial backoff for kafka clients.
-# backoff_init = "500ms"
-# The maximum backoff for kafka clients.
-# backoff_max = "10s"
-# Exponential backoff rate, i.e. next backoff = base * current backoff.
-# backoff_base = 2.0
-# Stop reconnecting if the total wait time reaches the deadline. If this config is missing, the reconnecting won't terminate.
-# backoff_deadline = "5mins"
+broker_endpoints = ["192.168.50.178:29092"]
+num_topics = 64
+selector_type = "round_robin"
+topic_name_prefix = "greptimedb_wal_topic"
+num_partitions = 1
+replication_factor = 3
+backoff_init = "500ms"
+backoff_max = "10s"
+backoff_base = 2.0
+backoff_deadline = "5mins"
 
 # WAL options for datanode.
 [wal_datanode]
 # Available wal providers:
 # - "RaftEngine" (default)
 # - "Kafka"
-provider = "raft_engine"
+provider = "kafka"
 
 # Kafka wal options.
-# The broker endpoints of the Kafka cluster. ["127.0.0.1:9090"] by default.
-# broker_endpoints = ["127.0.0.1:9090"]
-# The maximum log size a kafka batch producer could buffer.
-# max_batch_size = "4MB"
-# The linger duration of a kafka batch producer.
-# linger = "200ms"
-# The maximum amount of time (in milliseconds) to wait for Kafka records to be returned.
-# max_wait_time = "100ms"
-# The initial backoff for kafka clients.
-# backoff_init = "500ms"
-# The maximum backoff for kafka clients.
-# backoff_max = "10s"
-# Exponential backoff rate, i.e. next backoff = base * current backoff.
-# backoff_base = 2.0
-# Stop reconnecting if the total wait time reaches the deadline. If this config is missing, the reconnecting won't terminate.
-# backoff_deadline = "5mins"
+broker_endpoints = ["192.168.50.178:29092"]
+max_batch_size = "4MB"
+linger = "200ms"
+max_wait_time = "100ms"
+backoff_init = "500ms"
+backoff_max = "10s"
+backoff_base = 2.0
+backoff_deadline = "5mins"
 
 # WAL data directory
 # dir = "/tmp/greptimedb/wal"
@@ -243,7 +221,7 @@ parallel_scan_channel_size = 32
 # whether enable export metrics, default is false
 # enable = false
 # The url of metrics export endpoint, default is `frontend` default HTTP endpoint.
-# endpoint = "127.0.0.1:4000"
+# endpoint = ".0.0.1:4000"
 # The database name of exported metrics stores, user needs to specify a valid database
 # db = ""
 # The interval of export metrics
