--- a/config/standalone.example.toml
+++ b/config/standalone.example.toml
@@ -80,7 +80,7 @@ enable = true
 # Whether to enable Prometheus remote write and read in HTTP API, true by default.
 enable = true
 
-[wal_meta]
+[wal]
 # Available wal providers:
 # - "raft_engine" (default)
 # - "kafka"
@@ -88,9 +88,10 @@ provider = "raft_engine"
 
 # There're none raft-engine wal config since meta srv only involves in remote wal currently.
 
-# Kafka wal config.
+# Kafka wal options.
 # The broker endpoints of the Kafka cluster. ["127.0.0.1:9090"] by default.
 # broker_endpoints = ["127.0.0.1:9090"]
+
 # Number of topics to be created upon start.
 # num_topics = 64
 # Topic selector type.
@@ -103,33 +104,16 @@ provider = "raft_engine"
 # num_partitions = 1
 # Expected number of replicas of each partition.
 # replication_factor = 3
-# Above which a topic creation operation will be cancelled.
-# create_topic_timeout = "30s"
-# The initial backoff for kafka clients.
-# backoff_init = "500ms"
-# The maximum backoff for kafka clients.
-# backoff_max = "10s"
-# Exponential backoff rate, i.e. next backoff = base * current backoff.
-# backoff_base = 2.0
-# Stop reconnecting if the total wait time reaches the deadline. If this config is missing, the reconnecting won't terminate.
-# backoff_deadline = "5mins"
 
-# WAL options for datanode.
-[wal_datanode]
-# Available wal providers:
-# - "RaftEngine" (default)
-# - "Kafka"
-provider = "raft_engine"
-
-# Kafka wal options.
-# The broker endpoints of the Kafka cluster. ["127.0.0.1:9090"] by default.
-# broker_endpoints = ["127.0.0.1:9090"]
 # The maximum log size a kafka batch producer could buffer.
 # max_batch_size = "4MB"
 # The linger duration of a kafka batch producer.
 # linger = "200ms"
 # The maximum amount of time (in milliseconds) to wait for Kafka records to be returned.
-# max_wait_time = "100ms"
+# produce_record_timeout = "100ms"
+# Above which a topic creation operation will be cancelled.
+# create_topic_timeout = "30s"
+
 # The initial backoff for kafka clients.
 # backoff_init = "500ms"
 # The maximum backoff for kafka clients.
