fix: update doc label on pr edit
Signed-off-by: Ruihang Xia <waynestxia@gmail.com>

--- a/.github/workflows/doc-label.yml
+++ b/.github/workflows/doc-label.yml
@@ -17,3 +17,4 @@ jobs:
         configuration-path: .github/doc-label-config.yml
         enable-versioned-regex: false
         repo-token: ${{ github.token }}
+        sync-labels: 1
