add more trigger types
Signed-off-by: Ruihang Xia <waynestxia@gmail.com>

--- a/.github/workflows/doc-label.yml
+++ b/.github/workflows/doc-label.yml
@@ -1,7 +1,7 @@
 name: "PR Doc Labeler"
 on:
   pull_request:
-    types: [opened, edited]
+    types: [opened, edited, synchronize, ready_for_review, auto_merge_enabled, labeled, unlabeled]
 
 permissions:
   pull-requests: write
