--- a/.github/workflows/doc-label.yml
+++ b/.github/workflows/doc-label.yml
@@ -1,7 +1,7 @@
 name: "PR Doc Labeler"
 on:
   pull_request:
-    types: [opened, edited]
+    types: [opened, edited, synchronize, ready_for_review, auto_merge_enabled, labeled, unlabeled]
 
 permissions:
   pull-requests: write
@@ -16,4 +16,5 @@ jobs:
       with:
         configuration-path: .github/doc-label-config.yml
         enable-versioned-regex: false
-        repo-token: ${{ github.token }}
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
+        sync-labels: 1
