--- a/config/datanode.example.toml
+++ b/config/datanode.example.toml
@@ -39,25 +39,25 @@ tcp_nodelay = true
 # except those corresponding to the chosen one.
 [wal]
 # WAL data directory
-provider = "raft_engine"
+provider = "kafka"
 
 # Raft-engine wal options, see `standalone.example.toml`.
 # dir = "/tmp/greptimedb/wal"
-file_size = "256MB"
-purge_threshold = "4GB"
-purge_interval = "10m"
-read_batch_size = 128
-sync_write = false
+# file_size = "256MB"
+# purge_threshold = "4GB"
+# purge_interval = "10m"
+# read_batch_size = 128
+# sync_write = false
 
 # Kafka wal options, see `standalone.example.toml`.
-# broker_endpoints = ["127.0.0.1:9092"]
-# max_batch_size = "4MB"
-# linger = "200ms"
-# produce_record_timeout = "100ms"
-# backoff_init = "500ms"
-# backoff_max = "10s"
-# backoff_base = 2
-# backoff_deadline = "5mins"
+broker_endpoints = ["127.0.0.1:9092"]
+max_batch_size = "4MB"
+linger = "200ms"
+produce_record_timeout = "100ms"
+backoff_init = "500ms"
+backoff_max = "10s"
+backoff_base = 2
+backoff_deadline = "5mins"
 
 # Storage options, see `standalone.example.toml`.
 [storage]
