--- a/.github/workflows/size-label.yml
+++ b/.github/workflows/size-label.yml
@@ -21,8 +21,5 @@ jobs:
           l_max_size: '1000'
           xl_label: 'Size: XL'
           fail_if_xl: 'false'
-          message_if_xl: >
-            This PR exceeds the recommended size of 1000 lines.
-            Please make sure you are NOT addressing multiple issues with one PR.
-            Note this PR might be rejected due to its size.
+          message_if_xl: ""
           files_to_ignore: 'Cargo.lock'
