--- a/tests/conf/datanode-test.toml.template
+++ b/tests/conf/datanode-test.toml.template
@@ -6,12 +6,17 @@ rpc_hostname = '127.0.0.1'
 rpc_runtime_size = 8
 
 [wal]
+{{ if is_raft_engine }}
 provider = "raft_engine"
 file_size = '1GB'
 purge_interval = '10m'
 purge_threshold = '10GB'
 read_batch_size = 128
 sync_write = false
+{{ else }}
+provider = "kafka"
+broker_endpoints = {kafka_wal_broker_endpoints}
+{{ endif }}
 
 [storage]
 type = 'File'
