--- a/tests/conf/datanode-test.toml.template
+++ b/tests/conf/datanode-test.toml.template
@@ -15,7 +15,7 @@ read_batch_size = 128
 sync_write = false
 {{ else }}
 provider = "kafka"
-broker_endpoints = {kafka_wal_broker_endpoints}
+broker_endpoints = {kafka_wal_broker_endpoints | unescaped}
 {{ endif }}
 
 [storage]
