feat(inverted_index.integration): Add applier builder to convert Expr to Predicates (Part 1)
Signed-off-by: Zhenchi <zhongzc_arch@outlook.com>

--- a/src/mito2/Cargo.toml
+++ b/src/mito2/Cargo.toml
@@ -39,6 +39,7 @@ datafusion.workspace = true
 datatypes.workspace = true
 futures.workspace = true
 humantime-serde.workspace = true
+index.workspace = true
 lazy_static = "1.4"
 log-store = { workspace = true, optional = true }
 memcomparable = "0.2"
