--- a/tests/conf/datanode-test.toml.template
+++ b/tests/conf/datanode-test.toml.template
@@ -16,6 +16,7 @@ sync_write = false
 {{ else }}
 provider = "kafka"
 broker_endpoints = {kafka_wal_broker_endpoints | unescaped}
+linger = "5ms"
 {{ endif }}
 
 [storage]
