--- a/tests/conf/standalone-test.toml.template
+++ b/tests/conf/standalone-test.toml.template
@@ -13,6 +13,7 @@ sync_write = false
 {{ else }}
 provider = "kafka"
 broker_endpoints = {kafka_wal_broker_endpoints | unescaped}
+linger = "5ms"
 {{ endif }}
 
 [storage]
