--- a/src/common/test-util/Cargo.toml
+++ b/src/common/test-util/Cargo.toml
@@ -5,8 +5,9 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
-log-store.workspace = true
 once_cell.workspace = true
 rand.workspace = true
+rskafka.workspace = true
 tempfile.workspace = true
-store-api.workspace = true
+testcontainers = "0.15.0"
+tokio.workspace = true
