--- a/src/mito2/Cargo.toml
+++ b/src/mito2/Cargo.toml
@@ -29,6 +29,7 @@ common-procedure.workspace = true
 common-query.workspace = true
 common-recordbatch.workspace = true
 common-runtime.workspace = true
+pin-project.workspace = true
 common-telemetry.workspace = true
 common-test-util = { workspace = true, optional = true }
 common-time.workspace = true
