--- a/.github/workflows/doc-label.yml
+++ b/.github/workflows/doc-label.yml
@@ -20,7 +20,7 @@ jobs:
         sync-labels: 1
     - name: create an issue in doc repo
       uses: dacbd/create-issue-action@main
-      if: ${{ contains(github.event.pull_request.body, '- [ ]  This PR does not require documentation updates.') }}
+      if: ${{ github.event.action == 'opened' && contains(github.event.pull_request.body, '- [ ]  This PR does not require documentation updates.') }}
       with:
         owner: GreptimeTeam
         repo: docs
