feat: correct the kafka config option

--- a/config/datanode.example.toml
+++ b/config/datanode.example.toml
@@ -53,7 +53,7 @@ sync_write = false
 # broker_endpoints = ["127.0.0.1:9092"]
 # max_batch_size = "4MB"
 # linger = "200ms"
-# produce_record_timeout = "100ms"
+# consumer_wait_timeout = "100ms"
 # backoff_init = "500ms"
 # backoff_max = "10s"
 # backoff_base = 2
