--- a/config/standalone.example.toml
+++ b/config/standalone.example.toml
@@ -100,29 +100,29 @@ provider = "raft_engine"
 # Available selector types: 
 # - "round_robin" (default)
 # selector_type = "round_robin"
-# A Kafka topic is constructed by concatenating `topic_name_prefix` and `topic_id`.
+# The prefix of topic name.
 # topic_name_prefix = "greptimedb_wal_topic"
 # Number of partitions per topic.
 # num_partitions = 1
-# Expected number of replicas of each partition.
+# The number of replicas of each partition.
 # replication_factor = 1
 
-# The maximum log size a kafka batch producer could buffer.
+# The max size of a single producer batch.
 # max_batch_size = "4MB"
-# The linger duration of a kafka batch producer.
+# The linger duration.
 # linger = "200ms"
-# The maximum amount of time (in milliseconds) to wait for Kafka records to be returned.
+# The consumer wait timeout.
 # consumer_wait_timeout = "100ms"
-# Above which a topic creation operation will be cancelled.
+# Create topic timeout.
 # create_topic_timeout = "30s"
 
-# The initial backoff for kafka clients.
+# The initial backoff delay.
 # backoff_init = "500ms"
-# The maximum backoff for kafka clients.
+# The maximum backoff delay.
 # backoff_max = "10s"
 # Exponential backoff rate, i.e. next backoff = base * current backoff.
 # backoff_base = 2
-# Stop reconnecting if the total wait time reaches the deadline. If this config is missing, the reconnecting won't terminate.
+# The deadline of retries.
 # backoff_deadline = "5mins"
 
 # WAL data directory
