--- a/src/common/meta/Cargo.toml
+++ b/src/common/meta/Cargo.toml
@@ -23,6 +23,7 @@ common-procedure.workspace = true
 common-recordbatch.workspace = true
 common-runtime.workspace = true
 common-telemetry.workspace = true
+common-test-util.workspace = true
 common-time.workspace = true
 datatypes.workspace = true
 derive_builder.workspace = true
