--- a/src/common/test-util/Cargo.toml
+++ b/src/common/test-util/Cargo.toml
@@ -5,9 +5,13 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
+chrono.workspace = true
+common-config.workspace = true
+futures.workspace = true
 once_cell.workspace = true
 rand.workspace = true
 rskafka.workspace = true
+store-api.workspace = true
 tempfile.workspace = true
 testcontainers = "0.15.0"
 tokio.workspace = true
