feat(mito): Implement file cache (#3022)
* feat: recover cache

* feat: moka features

* test: tests for file cache

* chore: suppress warninig

* fix: parse_inde_key consider suffix

* feat: update cache

* feat: expose cache file path

* feat: use cache_path in test

--- a/src/mito2/Cargo.toml
+++ b/src/mito2/Cargo.toml
@@ -43,7 +43,7 @@ index.workspace = true
 lazy_static = "1.4"
 log-store = { workspace = true, optional = true }
 memcomparable = "0.2"
-moka = { workspace = true, features = ["sync"] }
+moka = { workspace = true, features = ["sync", "future"] }
 num_cpus = "1.13"
 object-store.workspace = true
 parquet = { workspace = true, features = ["async"] }
