--- a/src/common/test-util/Cargo.toml
+++ b/src/common/test-util/Cargo.toml
@@ -7,4 +7,7 @@ license.workspace = true
 [dependencies]
 once_cell.workspace = true
 rand.workspace = true
+rskafka.workspace = true
 tempfile.workspace = true
+testcontainers = "0.15.0"
+tokio.workspace = true
