--- a/src/mito2/Cargo.toml
+++ b/src/mito2/Cargo.toml
@@ -48,8 +48,10 @@ num_cpus = "1.13"
 object-store.workspace = true
 parquet = { workspace = true, features = ["async"] }
 paste.workspace = true
+pin-project.workspace = true
 prometheus.workspace = true
 prost.workspace = true
+puffin.workspace = true
 regex = "1.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json.workspace = true
