--- a/src/log-store/Cargo.toml
+++ b/src/log-store/Cargo.toml
@@ -21,9 +21,11 @@ common-macro.workspace = true
 common-meta.workspace = true
 common-runtime.workspace = true
 common-telemetry.workspace = true
+crc32fast = "1.3.2"
 dashmap.workspace = true
 futures-util.workspace = true
 futures.workspace = true
+itertools.workspace = true
 protobuf = { version = "2", features = ["bytes"] }
 raft-engine.workspace = true
 rskafka.workspace = true
