feat: add allow_stale_entries options to force obsolete wal entries

--- a/config/standalone.example.toml
+++ b/config/standalone.example.toml
@@ -208,6 +208,8 @@ sst_write_buffer_size = "8MB"
 scan_parallelism = 0
 # Capacity of the channel to send data from parallel scan tasks to the main task (default 32).
 parallel_scan_channel_size = 32
+# Whether to allow stale WAL entries read during replay.
+allow_stale_entries = false
 
 # Log options
 # [logging]
