--- a/config/datanode.example.toml
+++ b/config/datanode.example.toml
@@ -51,7 +51,8 @@ sync_write = false
 
 # Kafka wal options, see `standalone.example.toml`.
 # broker_endpoints = ["127.0.0.1:9092"]
-# max_batch_size = "4MB"
+# Warning: Kafka has a default limit of 1MB per message in a topic.
+# max_batch_size = "1MB"
 # linger = "200ms"
 # consumer_wait_timeout = "100ms"
 # backoff_init = "500ms"
