--- a/src/log-store/Cargo.toml
+++ b/src/log-store/Cargo.toml
@@ -14,6 +14,7 @@ async-stream.workspace = true
 async-trait.workspace = true
 byteorder = "1.4"
 bytes.workspace = true
+chrono.workspace = true
 common-base.workspace = true
 common-config.workspace = true
 common-error.workspace = true
@@ -21,7 +22,6 @@ common-macro.workspace = true
 common-meta.workspace = true
 common-runtime.workspace = true
 common-telemetry.workspace = true
-crc32fast = "1.3.2"
 dashmap.workspace = true
 futures-util.workspace = true
 futures.workspace = true
