--- a/src/query/Cargo.toml
+++ b/src/query/Cargo.toml
@@ -39,6 +39,8 @@ futures-util.workspace = true
 greptime-proto.workspace = true
 humantime = "2.1"
 lazy_static.workspace = true
+meter-core.workspace = true
+meter-macros.workspace = true
 object-store.workspace = true
 once_cell.workspace = true
 partition.workspace = true
