--- a/src/common/recordbatch/Cargo.toml
+++ b/src/common/recordbatch/Cargo.toml
@@ -5,6 +5,7 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
+arc-swap = "1.6"
 common-error.workspace = true
 common-macro.workspace = true
 datafusion-common.workspace = true
@@ -13,8 +14,8 @@ datatypes.workspace = true
 futures.workspace = true
 paste = "1.0"
 serde.workspace = true
+serde_json.workspace = true
 snafu.workspace = true
 
 [dev-dependencies]
-serde_json = "1.0"
 tokio.workspace = true
