--- a/src/log-store/Cargo.toml
+++ b/src/log-store/Cargo.toml
@@ -37,6 +37,7 @@ snafu.workspace = true
 store-api.workspace = true
 tokio-util.workspace = true
 tokio.workspace = true
+uuid.workspace = true
 
 [dev-dependencies]
 common-meta = { workspace = true, features = ["testing"] }
