wip: add some ut

--- a/src/operator/Cargo.toml
+++ b/src/operator/Cargo.toml
@@ -54,3 +54,6 @@ substrait.workspace = true
 table.workspace = true
 tokio.workspace = true
 tonic.workspace = true
+
+[dev-dependencies]
+common-test-util.workspace = true
