--- a/src/store-api/Cargo.toml
+++ b/src/store-api/Cargo.toml
@@ -16,6 +16,7 @@ common-macro.workspace = true
 common-query.workspace = true
 common-recordbatch.workspace = true
 common-time.workspace = true
+common-wal.workspace = true
 datatypes.workspace = true
 derive_builder.workspace = true
 futures.workspace = true
