fix: add missing crates

--- a/src/common/meta/Cargo.toml
+++ b/src/common/meta/Cargo.toml
@@ -29,6 +29,7 @@ datatypes.workspace = true
 derive_builder.workspace = true
 etcd-client.workspace = true
 futures.workspace = true
+futures-util.workspace = true
 humantime-serde.workspace = true
 lazy_static.workspace = true
 prometheus.workspace = true
