--- a/src/store-api/Cargo.toml
+++ b/src/store-api/Cargo.toml
@@ -10,12 +10,12 @@ aquamarine.workspace = true
 async-trait.workspace = true
 bytes.workspace = true
 common-base.workspace = true
-common-config.workspace = true
 common-error.workspace = true
 common-macro.workspace = true
 common-query.workspace = true
 common-recordbatch.workspace = true
 common-time.workspace = true
+common-wal.workspace = true
 datatypes.workspace = true
 derive_builder.workspace = true
 futures.workspace = true
