feat: make procedure able to return output

--- a/src/common/procedure/Cargo.toml
+++ b/src/common/procedure/Cargo.toml
@@ -11,6 +11,7 @@ testing = []
 async-stream.workspace = true
 async-trait.workspace = true
 backon = "0.4"
+bytes.workspace = true
 common-error.workspace = true
 common-macro.workspace = true
 common-runtime.workspace = true
